<resources>
    <string name="app_name">Planets Quiz</string>
    <string name="mercury">MERCURY</string>
    <string name="venus">VENUS</string>
    <string name="earth">EARTH</string>
    <string name="mars">MARS</string>
    <string name="jupiter">JUPITER</string>
    <string name="saturn">SATURN</string>
    <string name="uranus">URANUS</string>
    <string name="neptune">NEPTUNE</string>
    <string name="question_number_one">What is the largest planet?</string>
    <string name="question_number_two">Which planet has the most moons?</string>
    <string name="question_number_three">Which planet spins on its side</string>
    <string name="answer_question_number_one">Jupiter is the largest planet and is 2.5 times the mass of all the other planets put together.</string>
    <string name="answer_question_number_two">Saturn has the most moons and has 82 moons.</string>
    <string name="answer_question_number_three">Uranus spins on its side with its axis at nearly a right angle to the sun.</string>
</resources>