<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Button 1 -->
    <Button
        android:id="@+id/question_number_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_number_one"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Button 2 -->
    <Button
        android:id="@+id/question_number_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_number_two"
        app:layout_constraintTop_toBottomOf="@id/question_number_one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Button 3 -->
    <Button
        android:id="@+id/question_number_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_number_three"
        app:layout_constraintTop_toBottomOf="@id/question_number_two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
